remove gender and add class of student

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <tr>
               <th>ID</th>
               <th>Name</th>
-              <th>Gender</th>
+              <th>Class</th>
               <th>Fees Type</th>
               <th>Amount</th>
               <th>Pending</th>
@@ -180,58 +180,6 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>PRE1234</td>
-              <td>Nathan Humphries</td>
-              <td>Male</td>
-              <td>Exam Fees</td>
-              <td>278</td>
-              <td>0</td>
-              <td>17 Nov 2020</td>
-              <td><span class="status-paid">Paid</span></td>
-            </tr>
-            <tr>
-              <td rowspan="3">PRE1252</td>
-              <td rowspan="3">Joe Kelley</td>
-              <td rowspan="3">Female</td>
-              <td rowspan="3">Transport Fees</td>
-            </tr>
-            <tr>
-              <td>100</td>
-              <td>250</td>
-              <td>17 Oct 2020</td>
-              <td><span class="status-unpaid">Unpaid</span></td>
-            </tr>
-            <tr>
-              <td>250</td>
-              <td>0</td>
-              <td>19 Oct 2020</td>
-              <td><span class="status-paid">Paid</span></td>
-            </tr>
-            <tr>
-              <td rowspan="4">PRE1252</td>
-              <td rowspan="4">Joe Kelley</td>
-              <td rowspan="4">Female</td>
-              <td rowspan="4">Exam Fees</td>
-            </tr>
-            <tr>
-              <td>100</td>
-              <td>250</td>
-              <td>17 Oct 2020</td>
-              <td><span class="status-unpaid">Unpaid</span></td>
-            </tr>
-            <tr>
-              <td>100</td>
-              <td>150</td>
-              <td>18 Oct 2020</td>
-              <td><span class="status-unpaid">Unpaid</span></td>
-            </tr>
-            <tr>
-              <td>150</td>
-              <td>0</td>
-              <td>19 Oct 2020</td>
-              <td><span class="status-paid">Paid</span></td>
-            </tr>
           </tbody>
         </table>
       </div>
@@ -242,7 +190,7 @@
 
         <div class="card p-4 mt-3">
           <h5>Fees Information</h5>
-          <form onsubmit="addFeeEntry(event)">
+          <form onsubmit="addFeeEntry(event)" id="addFeesForm">
             <div class="row g-3">
               <div class="col-md-4">
                 <label for="studentId" class="form-label"
@@ -269,14 +217,18 @@
                 />
               </div>
               <div class="col-md-4">
-                <label for="gender" class="form-label"
-                  >Gender <span class="text-danger">*</span></label
+                <label for="studentClass" class="form-label"
+                  >Class <span class="text-danger">*</span></label
                 >
-                <select id="gender" class="form-select" required>
-                  <option selected disabled>Select Gender</option>
-                  <option>Male</option>
-                  <option>Female</option>
-                  <option>Other</option>
+                <select id="studentClass" class="form-select" required>
+                  <option selected disabled>Select Division</option>
+                  <option>Nursery Mercury</option>
+                  <option>Nursery Venus</option>
+                  <option>Junior KG Earth</option>
+                  <option>Junior KG Mars</option>
+                  <option>Senior KG Jupiter</option>
+                  <option>Senior KG Saturn</option>
+                  <option>Senior KG Uranus</option>
                 </select>
               </div>
               <div class="col-md-4">
