--- a/index.html
+++ b/index.html
@@ -12,115 +12,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
-    <style>
-      /* General Styles */
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f6f9;
-      }
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
 
-      /* Sidebar Styles */
-      .sidebar {
-        height: 100vh;
-        width: 250px;
-        position: fixed;
-        background-color: #0f265e;
-        color: #fff;
-        padding-top: 20px;
-        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-      }
-      .sidebar h3 {
-        text-align: center;
-        font-size: 24px;
-        color: #ffffff;
-        font-weight: 600;
-        margin-bottom: 30px;
-      }
-      .sidebar .nav-link {
-        color: #bdc3c7;
-        font-size: 16px;
-        margin: 5px 10px;
-        border-radius: 5px;
-      }
-      .sidebar .nav-link.active,
-      .sidebar .nav-link:hover {
-        background-color: #ffffff;
-        color: #0f265e;
-      }
-
-      /* Main Content */
-      .content {
-        margin-left: 260px;
-        padding: 40px;
-        background-color: #f4f6f9;
-      }
-      .content h2 {
-        font-size: 28px;
-        font-weight: 600;
-        color: #34495e;
-      }
-      .btn-primary {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        background-color: #2667ff;
-      }
-      .btn-primary:hover {
-        background-color: #194fcf;
-      }
-
-      /* Table Styles */
-      .table {
-        background-color: #ffffff;
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
-      }
-      .table thead th {
-        background-color: #2667ff;
-        color: #ffffff;
-        border: none;
-        text-transform: uppercase;
-        font-size: 14px;
-        letter-spacing: 0.5px;
-      }
-      .table tbody tr:hover {
-        background-color: #ecf0f1;
-      }
-      .table tbody td {
-        vertical-align: middle;
-      }
-      .table tbody tr td img {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-      }
-
-      /* Status Styles */
-      .status-paid {
-        background-color: #2ecc71;
-        color: #ffffff;
-        padding: 4px 8px;
-        border-radius: 4px;
-        font-size: 13px;
-        font-weight: 500;
-      }
-      .status-unpaid {
-        background-color: #e74c3c;
-        color: #ffffff;
-        padding: 4px 8px;
-        border-radius: 4px;
-        font-size: 13px;
-        font-weight: 500;
-      }
-
-      /* Hide all content sections initially */
-      .content-section {
-        display: none;
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Sidebar -->
@@ -171,6 +72,7 @@
             <tr>
               <th>ID</th>
               <th>Name</th>
+              <th>Contact Details</th>
               <th>Class</th>
               <th>Fees Type</th>
               <th>Amount</th>
@@ -179,17 +81,14 @@
               <th>Status</th>
             </tr>
           </thead>
-          <tbody>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
 
       <div id="addFees" class="content-section">
         <h2>Add Fees</h2>
-        <div class="breadcrumb">Accounts / Add Fees</div>
 
         <div class="card p-4 mt-3">
-          <h5>Fees Information</h5>
           <form onsubmit="addFeeEntry(event)" id="addFeesForm">
             <div class="row g-3">
               <div class="col-md-4">
@@ -200,7 +99,8 @@
                   type="text"
                   class="form-control"
                   id="studentId"
-                  placeholder="Student ID"
+                  placeholder="Enter Student ID"
+                  maxlength="10"
                   required
                 />
               </div>
@@ -212,7 +112,8 @@
                   type="text"
                   class="form-control"
                   id="studentName"
-                  placeholder="Student Name"
+                  placeholder="Enter Student Name"
+                  maxlength="50"
                   required
                 />
               </div>
@@ -221,7 +122,7 @@
                   >Class <span class="text-danger">*</span></label
                 >
                 <select id="studentClass" class="form-select" required>
-                  <option selected disabled>Select Division</option>
+                  <option selected disabled="">Select Division</option>
                   <option>Nursery Mercury</option>
                   <option>Nursery Venus</option>
                   <option>Junior KG Earth</option>
@@ -231,6 +132,7 @@
                   <option>Senior KG Uranus</option>
                 </select>
               </div>
+
               <div class="col-md-4">
                 <label for="feesType" class="form-label"
                   >Fees Type <span class="text-danger">*</span></label
@@ -250,7 +152,7 @@
                   type="text"
                   class="form-control"
                   id="feesAmount"
-                  placeholder="Fees Amount"
+                  placeholder="Enter Fees Amount"
                   required
                 />
               </div>
@@ -263,12 +165,88 @@
                   type="text"
                   class="form-control"
                   id="pendingAmount"
-                  placeholder="Pending Amount"
+                  placeholder="Enter Pending Amount"
                 />
               </div>
               <div class="col-md-4">
-                <label for="paidDate" class="form-label">Paid Date <span class="text-danger">*</span></label>
-                <input type="text" class="form-control" id="paidDate" placeholder="DD-MM-YYYY" required />
+                <label for="paidDate" class="form-label"
+                  >Paid Date <span class="text-danger">*</span></label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="paidDate"
+                  placeholder="DD-MM-YYYY"
+                  required
+                />
+              </div>
+
+              <div class="col-md-4">
+                <label class="form-label"
+                  >Payment method <span class="text-danger">*</span></label
+                >
+                <div class="d-flex gap-4">
+                  <div class="payment-option">
+                    <input type="radio" id="gpay" name="payment" value="gpay" required/>
+                    <label for="gpay">
+                      <img src="assets/google-pay.png" alt="GPay" height="40" />
+                    </label>
+                  </div>
+  
+                  <div class="payment-option">
+                    <input type="radio" id="cash" name="payment" value="cash" />
+                    <label for="cash">
+                      <img src="assets/cash.png" alt="Cash" height="40" />
+                    </label>
+                  </div>
+  
+                  <div class="payment-option">
+                    <input
+                      type="radio"
+                      id="cheque"
+                      name="payment"
+                      value="cheque"
+                    />
+                    <label for="cheque">
+                      <img src="assets/cheque.png" alt="Cheque" height="40" />
+                    </label>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Contact Details Section -->
+            <h5 class="mt-4">Contact Details</h5>
+            <div class="row g-3">
+              <div class="col-md-6">
+                <label for="parentName" class="form-label">Parent's Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="parentName"
+                  maxlength="50"
+                  placeholder="Enter Parent's Name"
+                  required
+                />
+              </div>
+              <div class="col-md-6">
+                <label for="parentPhone" class="form-label"
+                  >Parent's Phone Number</label
+                >
+                <div class="input-group">
+                  <span class="input-group-text">+91</span>
+                  <input
+                    type="tel"
+                    class="form-control"
+                    id="parentPhone"
+                    placeholder="Enter Contact Number"
+                    pattern="[0-9]{10}"
+                    title="Enter a 10-digit phone number"
+                    maxlength="10"
+                    oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);"
+                    required
+                  />
+                </div>
               </div>
             </div>
             <button type="submit" class="btn btn-primary mt-4">Submit</button>
@@ -280,9 +258,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-
-    <script src="index.js"></script>
-
-    
+    <script src="js/tableHandler.js"></script>
+    <script src="js/formHandler.js"></script>
   </body>
 </html>
