--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div
             class="d-flex justify-content-between align-items-center me-2 flex-wrap"
           >
-            <button class="btn btn-primary m-2">
+            <button class="btn btn-primary m-2" onclick="downloadExcel()">
               <i class="fas fa-download"></i> Download
             </button>
             <button
@@ -257,8 +257,10 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="js/tableHandler.js"></script>
     <script src="js/formHandler.js"></script>
+    <script src="js/controls.js"></script>
   </body>
 </html>
